# name-the-doc

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/config/: __init__.py
src/namethedoc/: __main__.py  config.py
src/namethedoc/prepare/: __main__.py
src/prepare/: __main__.py
